--- a/src/protected/application/plugins/SealModel1/assets/css/sass/main.sass
+++ b/src/protected/application/plugins/SealModel1/assets/css/sass/main.sass
@@ -3,37 +3,54 @@
     background-size: contain
     background-repeat: no-repeat
     height: 100%
-    overflow: auto
+    overflow: hidden
     margin: auto
 
+    img.background
+        position: absolute
+        z-index: -1
+        opacity: 0.95
+        width: 1250px
+
     p.certificate-content
-        margin: 201px 520px 0 60px
-        padding: 40px 0 0 0
-        font-size: 23px
+        margin: 200px 535px 0 53px
+        padding: 30px 0 0 0
+        font-size: 22px
         line-height: 2.2rem
         text-align: justify
+        height: 526px
 
         span.entity-name
             font-size: 22px
             font-style: italic
 
     .footer
-        margin-top: 30px
         width: 100%
-        margin-left: 62px
+
+        .entity-url
+            margin-left: 72px
+            margin-top: 88px
+            width: 364px
 
         .footer-signatures
-            width: auto
-            min-width: 580px
+            width: 720px
             text-align: center
+            float: right
+            position: absolute
+            margin-top: -20px
+
             div
                 display: inline
+                &.certificate-seal-owner p
+                    margin-bottom: 0px
+                    height: 50px
 
         div
             position: relative
-            margin: 10px
             vertical-align: bottom
             display: inline-block
 
-        div img
-            height: 80px
+        div.footer-img
+            margin: 0 7px
+            > img
+                height: 82px
