--- a/src/protected/application/plugins/SealModel3/assets/css/sass/main.sass
+++ b/src/protected/application/plugins/SealModel3/assets/css/sass/main.sass
@@ -1,38 +1,60 @@
-#certificate-model1
+#certificate-model3
     width: 1250px
     background-size: contain
     background-repeat: no-repeat
     height: 100%
-    overflow: auto
+    overflow: hidden
     margin: auto
+    color: #FFF
+
+    img.background
+        position: absolute
+        z-index: -1
+        opacity: 0.95
+        width: 1250px
 
     p.certificate-content
-        margin: 160px 126px 0px 190px
-        padding: 40px 0
-        font-size: 25px
+        margin: 200px 55px 0 358px
+        font-size: 22px
         line-height: 2.2rem
+        text-align: justify
+        height: 560px
 
         span.entity-name
             font-size: 22px
             font-style: italic
 
     .footer
-        margin-top: 50px
         width: 100%
-        text-align: right
+
+        .entity-url
+            margin-left: 260px
+            margin-top: 90px
+            width: 120px
+            overflow: visible
+            font-size: 13px
+            > a
+                color: #E0E0E0
 
         .footer-signatures
-            width: auto
-            min-width: 580px
+            width: 870px
             text-align: center
+            float: right
+            position: absolute
+            margin-top: -25px
+
             div
                 display: inline
+                &.certificate-seal-owner p
+                    margin-bottom: 0px
+                    height: 50px
 
         div
             position: relative
-            margin: 10px
             vertical-align: bottom
             display: inline-block
 
-        div img
-            height: 80px
+        div.footer-img
+            margin: 0 7px
+            > img
+                height: 82px
