--- a/src/protected/application/plugins/SealModel4/assets/css/sass/main.sass
+++ b/src/protected/application/plugins/SealModel4/assets/css/sass/main.sass
@@ -1,38 +1,57 @@
-#certificate-model1
+#certificate-model4
     width: 1250px
     background-size: contain
     background-repeat: no-repeat
     height: 100%
-    overflow: auto
+    overflow: hidden
     margin: auto
 
+    img.background
+        position: absolute
+        z-index: -1
+        opacity: 0.95
+        width: 1250px
+
     p.certificate-content
-        margin: 160px 126px 0px 190px
-        padding: 40px 0
-        font-size: 25px
+        margin: 220px 212px 0 90px
+        font-size: 22px
         line-height: 2.2rem
+        text-align: justify
+        height: 505px
 
         span.entity-name
             font-size: 22px
             font-style: italic
 
     .footer
-        margin-top: 50px
         width: 100%
-        text-align: right
+
+        .entity-url
+            margin-left: 160px
+            margin-top: 95px
+            width: 240px
+            font-size: 13px
+            overflow: visible
 
         .footer-signatures
-            width: auto
-            min-width: 580px
+            width: 730px
             text-align: center
+            float: right
+            position: absolute
+            margin-top: -20px
+
             div
                 display: inline
+                &.certificate-seal-owner p
+                    margin-bottom: 0px
+                    height: 50px
 
         div
             position: relative
-            margin: 10px
             vertical-align: bottom
             display: inline-block
 
-        div img
-            height: 80px
+        div.footer-img
+            margin: 0 7px
+            > img
+                height: 82px
